--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "xwing-data"]
-	path = xwing-data
-	url = https://github.com/guidokessels/xwing-data.git
+[submodule "xwing-data2"]
+	path = xwing-data2
+	url = https://github.com/guidokessels/xwing-data2.git
